--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,7 +11,7 @@ keywords = ["library", "sound", "3D", "fmod", "fmodex"]
 license-file = "LICENSE.TXT"
 
 [dependencies]
-c_vec = "~1.0"
+c_vec = "1.2"
 byteorder = "1.2"
 libc = "0.2.6"
 
